--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -2,6 +2,9 @@
 
   <section class="container">
     <h1>Lorem ipsum dolor sit amet</h1>
+    <h1>
+      <%= csrfToken %>
+    </h1>
     <form action="/" method="post">
       <input type="hidden" name="_csrf" value="<%= csrfToken %>">
       <label>Nome</label>
